Revert button_list_template changes, and simply change button.html to use button.render for new style buttons

--- a/wagtail/contrib/modeladmin/templates/modeladmin/includes/button.html
+++ b/wagtail/contrib/modeladmin/templates/modeladmin/includes/button.html
@@ -1,1 +1,1 @@
-<a{% if button.url %} href="{{ button.url }}"{% endif %} class="{{ button.classname }}" title="{{ button.title }}"{% if button.target %} target="{{ button.target }}"{% endif %}>{{ button.label }}</a>
+{% if button.can_render_self %}{{ button }}{% else %}<a{% if button.url %} href="{{ button.url }}"{% endif %} class="{{ button.classname }}" title="{{ button.title }}"{% if button.target %} target="{{ button.target }}"{% endif %}>{{ button.label }}</a>{% endif %}
